force-app/main/default/objects/ChefReview__c/fields/Response_Date__c.field-meta.xml
<CustomField>
    <fullName>Response_Date__c</fullName>
    <description>Date when the response was provided</description>
    <inlineHelpText>Please enter your response date.</inlineHelpText>
    <label>Response Date</label>
    <type>Date</type>
</CustomField>